--- a/Creatiwise/css/style.css
+++ b/Creatiwise/css/style.css
@@ -120,6 +120,13 @@ ul{
     color:  #484d51;
     font-size: 15px;
 }
+.btn-check:focus+.btn, .btn:focus {
+    box-shadow: none;
+}
+
+.form-control:focus {
+    box-shadow: none;
+}
 .footer ul li {
     display: block;
     margin-bottom: 10px;
